test/TestPhases/typechecker/invalid/NoMagicCasting2.blc
module

function noMagicCasting()
    var a: int32 = -128

    var c: int16 = a
    var d: int8 = a
end
